# ilifu_user_training

./: LICENSE  README.md  index.html
.github/workflows/: deploy.yml
advanced1/tutorial1/: virtualenv.md
advanced1/tutorial2/: README.md  job_script.py  script1_setup.sh
advanced1/tutorial3/: slurm-arrayjob.sh
advanced2/tutorial1/: 1_cpu_1_node.sbatch  4_cpus_1_node.sbatch  8_cpus_1_node.sbatch  8_cpus_1_node_container.sbatch  8_cpus_2_nodes.sbatch  README.md  requirements.txt  simple_mpi.py
advanced2/tutorial2/: README.md  initialise_array.sbatch
advanced2/tutorial3/: README.md  script1_setup.py  script_combined.py  slurm_script2_calc.sbatch  slurm_script_dependent.sh
introduction/tutorial1/: example_notebook.ipynb  jupyter_tutorial.ipynb
introduction/tutorial2/: README.md  barebones.sh  full.sh  hello_world.R  hello_world.py  job_script.py  morebones.sh  slurm_job_script.sh  tutorial2.md
resources/: page.css  theme.css
session1/: README.md  index.html  presentation_2.html
session1/tutorial1/: index.html  jupyter_tutorial.ipynb
session1/tutorial2/: README.md  hello_world.py  index.html  maximal.sbatch  maximal_R.sbatch  maximal_python.sbatch  minimal.sbatch  presentation.html
session2/: README.md  index.html
session2/tutorial1/: index.html  virtualenv.md
session3/: README.md  index.html  presentation_1.html
session5/: index.html
session5/tutorial1/: README.md  cromwell_slurm.conf  image_reduction.wdl  index.html  nextflow.config  pyproject.toml  simple_fastq_workflow.nf  submit_cromwell_workflow.sbatch  submit_nextflow_workflow.sbatch
(+49 files in other folders)
